<resources>
    <string name="app_name">Calculate</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="delete">delete</string>
    <string name="mul">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="div">/</string>
    <string name="per">%</string>
    <string name="degree">x^y</string>
    <string name="negative">+/-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="delete_one_digit"><![CDATA[<---]]></string>
    <string name="div_one_to">1/x</string>
    <string name="clear">CLEAR</string>
    <string name="example">1203+8463</string>
</resources>